    section header, like the original file. Also, change
    t/19param-found-outside-section.t a bit to not require IO::Scalar and use 
    File::Temp instead (we are testing WriteConfig anyway).
    - Shlomi Fish fixed unless'es to if's and converted a do { ... } if call to
    a block conditional, as well as made the open statements on t/19param
    more secure.

Version 2.61:    ( Sun Nov 14 10:52:39 IST 2010 )
-------------------------------------------------

* Correct the opening comment on t/26scalar-filehandle.t to point to the right
bug URL and to include the title of the bug
    - https://rt.cpan.org/Ticket/Display.html?id=54997 - this is the right
    URL.

* Correct the check in t/26scalar-filehandle.t - it should check that Perl
is above 5.8.x - not that IO::Scalar is available, because we use
open my $fh, "<", \$buffer;

Version 2.60:   ( Sat Nov 13 09:21:23 IST 2010 )
------------------------------------------------

* Made t/19param-found-outside-section.t pass in case IO::Scalar is not
installed.
    - We got many failing test reports due to that, like:
    - http://www.cpantesters.org/cpan/report/eb3df0f4-eeb7-11df-b934-9430e12b63f3

Version 2.59:   ( Fri Nov 12 13:21:02 IST 2010 )
------------------------------------------------

* Applied a patch from "sharyanto" about enabling the -fallback parameter
to new for items outside any section.
    - https://rt.cpan.org/Public/Bug/Display.html?id=62944

* Add the tag-release.pl file to tag a release.

Version 2.58:   ( Mon May 17 10:43:06 IDT 2010 )
------------------------------------------------

* Incorporated a fix for some broken POD.
    - https://rt.cpan.org/Ticket/Display.html?id=51617
    - Thanks to Frank Wiegand for reporting it.

* Got rid of \r/carriage-returns's in lib/Config/IniFiles.pm .
    - It interfered with applying a patch.

* Applied a patch to get rid of indirect object notation in the documentation
and code ("new Config::IniFiles") and replace it with Config::IniFiles->new().