@@ -8,6 +8,10 @@ ac6ace8bf09fabba4e6ea3b2826ff13cd30507bc :
     a block conditional, as well as made the open statements on t/19param
     more secure.
 
+* Add -nomultiline option.
+    -Applied a modified version of Steven Haryanto's commit
+    2181f438d40b54c290a2dda5627a244c6e467a7b
+
 Version 2.61:    ( Sun Nov 14 10:52:39 IST 2010 )
 -------------------------------------------------
 
